# ancient

./: .gitignore  ACCADecompressor.cpp  ACCADecompressor.hpp  Ancient.sln  Ancient.vcproj  Ancient.vcxproj  Buffer.cpp  Buffer.hpp  CBR0Decompressor.cpp  CBR0Decompressor.hpp  CRMDecompressor.cpp  CRMDecompressor.hpp  DEFLATEDecompressor.cpp  DEFLATEDecompressor.hpp  DLTADecode.cpp  DLTADecode.hpp  Decompressor.cpp  Decompressor.hpp  FASTDecompressor.cpp  FASTDecompressor.hpp  FRLEDecompressor.cpp  FRLEDecompressor.hpp  HFMNDecompressor.cpp  HFMNDecompressor.hpp  HUFFDecompressor.cpp  HUFFDecompressor.hpp  HuffmanDecoder.hpp  IMPDecompressor.cpp  IMPDecompressor.hpp  LICENSE  MASHDecompressor.cpp  MASHDecompressor.hpp  Makefile  Makefile.am  Makefile.unix  NONEDecompressor.cpp  NONEDecompressor.hpp  NUKEDecompressor.cpp  NUKEDecompressor.hpp  PPDecompressor.cpp  (+32 more)
.github/workflows/: codeql.yml  msbuild-latest.yml  ubuntu-20.04-autotools.yml  ubuntu-20.04-extra.yml  ubuntu-20.04-fuzzing-build.yml  ubuntu-20.04-make.yml  ubuntu-24.04-autotools.yml  ubuntu-24.04-extra.yml  ubuntu-24.04-fuzzing-build.yml  ubuntu-24.04-make.yml
api/: Buffer.hpp  Decompressor.hpp
api/ancient/: Buffer.hpp  Decompressor.hpp  ancient.hpp
extra/: .gitignore  BruteForceRNC1Encoder.cpp  Makefile
fuzzing/: .gitignore  all_formats.dict  build.sh  fuzz-main.sh  fuzz-secondary.sh  fuzz-settings.sh  fuzz.cpp  get-afl.sh  readme.md
src/: ACCADecompressor.cpp  ACCADecompressor.hpp  API.cpp  ARTMDecompressor.cpp  ARTMDecompressor.hpp  ArrayBuffer.hpp  BLZWDecompressor.cpp  BLZWDecompressor.hpp  BZIP2Decompressor.cpp  BZIP2Decompressor.hpp  Buffer.cpp  Buffer.hpp  ByteKillerDecompressor.cpp  ByteKillerDecompressor.hpp  CBR0Decompressor.cpp  CBR0Decompressor.hpp  CRC16.cpp  CRC16.hpp  CRC32.cpp  CRC32.hpp  CRMDecompressor.cpp  CRMDecompressor.hpp  CYB2Decoder.cpp  CYB2Decoder.hpp  Common.cpp  Common.hpp  CompactDecompressor.cpp  CompactDecompressor.hpp  CompressDecompressor.cpp  DEFLATEDecompressor.cpp  DEFLATEDecompressor.hpp  DLTADecode.cpp  DLTADecode.hpp  DMSDecompressor.cpp  DMSDecompressor.hpp  Decompressor.cpp  Decompressor.hpp  DynamicHuffmanDecoder.hpp  FASTDecompressor.cpp  FASTDecompressor.hpp  (+104 more)
src/Lzh/: LH1Decompressor.cpp  LH1Decompressor.hpp  LH2Decompressor.cpp  LH2Decompressor.hpp  LH3Decompressor.cpp  LH3Decompressor.hpp  LHXDecompressor.cpp  LHXDecompressor.hpp  LZ5Decompressor.cpp  LZ5Decompressor.hpp  LZHDecompressor.cpp  LZHDecompressor.hpp  LZSDecompressor.cpp  LZSDecompressor.hpp  PMDecompressor.cpp  PMDecompressor.hpp
src/Zip/: ImplodeDecompressor.cpp  ImplodeDecompressor.hpp  ReduceDecompressor.cpp  ReduceDecompressor.hpp  ShrinkDecompressor.cpp  ShrinkDecompressor.hpp  ZIPDecompressor.cpp  ZIPDecompressor.hpp
src/attic/Lzh/: LH2Decompressor.cpp
src/common/: Buffer.cpp  Buffer.hpp  CRC16.cpp  CRC16.hpp  CRC32.cpp  CRC32.hpp  Common.cpp  Common.hpp  MemoryBuffer.cpp  MemoryBuffer.hpp  OverflowCheck.hpp  StaticBuffer.cpp  StaticBuffer.hpp  SubBuffer.cpp  SubBuffer.hpp
testing/: full_test.sh  test.cpp
testing/test_files/: README.md  test_C1.C  test_C1.F  test_C1.Z  test_C1.ace  test_C1.adf  test_C1.anc  test_C1.byte_2.0  test_C1.byte_2.03  test_C1.bytepro_1.0  test_C1.bz2  test_C1.crm  test_C1.grac  test_C1.ice_113  test_C1.ice_211  test_C1.ice_22  test_C1.ice_24  test_C1.ice_she  test_C1.ice_tmm  test_C1.ice_tsm  test_C1.imp  test_C1.jam1.0  test_C1.jam4.0_lzh  test_C1.jam4.0_lzw  test_C1.jam4.0_v2  test_C1.jek_1.3  test_C1.jek_2.3  test_C1.md10  test_C1.pack271_000  test_C1.pack271_032  test_C1.pack271_033  test_C1.pack271_132  test_C1.pack271_232  test_C1.pack271_332  test_C1.pack271_432  test_C1.pack271_532  test_C1.pack271_632  test_C1.pack271_732  test_C1.pack271_733  test_C1.pack292_1  (+159 more)
