ACLOCAL_AMFLAGS = -I m4 --install
EXTRA_DIST = 
EXTRA_DIST += .gitignore
EXTRA_DIST += libancient.pc.in
EXTRA_DIST += LICENSE
EXTRA_DIST += Makefile.unix
EXTRA_DIST += README.md
EXTRA_DIST += extra/BruteForceRNC1Encoder.cpp
EXTRA_DIST += extra/Makefile
EXTRA_DIST += fuzzing/all_formats.dict
EXTRA_DIST += fuzzing/build.sh
EXTRA_DIST += fuzzing/fuzz-main.sh
EXTRA_DIST += fuzzing/fuzz-secondary.sh
EXTRA_DIST += fuzzing/fuzz-settings.sh
EXTRA_DIST += fuzzing/fuzz.cpp
EXTRA_DIST += fuzzing/get-afl.sh
EXTRA_DIST += fuzzing/readme.md
MOSTLYCLEANFILES = 

dist_doc_DATA = 
dist_doc_DATA += LICENSE
dist_doc_DATA += README.md
nobase_dist_doc_DATA = 

bin_PROGRAMS = 
check_PROGRAMS = 
lib_LTLIBRARIES = 

TESTS = 

pkgconfigdir = $(libdir)/pkgconfig
pkgconfig_DATA = 
nobase_include_HEADERS = 

LIBANCIENT_FILES_SRC =
LIBANCIENT_FILES_SRC += src/ACCADecompressor.cpp
LIBANCIENT_FILES_SRC += src/ACCADecompressor.hpp
LIBANCIENT_FILES_SRC += src/API.cpp
LIBANCIENT_FILES_SRC += src/ARTMDecompressor.cpp
LIBANCIENT_FILES_SRC += src/ARTMDecompressor.hpp
LIBANCIENT_FILES_SRC += src/BLZWDecompressor.cpp
LIBANCIENT_FILES_SRC += src/BLZWDecompressor.hpp
LIBANCIENT_FILES_SRC += src/BZIP2Decompressor.cpp
LIBANCIENT_FILES_SRC += src/BZIP2Decompressor.hpp
LIBANCIENT_FILES_SRC += src/BZIP2Table.hpp
LIBANCIENT_FILES_SRC += src/CBR0Decompressor.cpp
LIBANCIENT_FILES_SRC += src/CBR0Decompressor.hpp
LIBANCIENT_FILES_SRC += src/CompressDecompressor.cpp
LIBANCIENT_FILES_SRC += src/CompressDecompressor.hpp
LIBANCIENT_FILES_SRC += src/CRMDecompressor.cpp
LIBANCIENT_FILES_SRC += src/CRMDecompressor.hpp
LIBANCIENT_FILES_SRC += src/CYB2Decoder.cpp
LIBANCIENT_FILES_SRC += src/CYB2Decoder.hpp
LIBANCIENT_FILES_SRC += src/DEFLATEDecompressor.cpp
LIBANCIENT_FILES_SRC += src/DEFLATEDecompressor.hpp
LIBANCIENT_FILES_SRC += src/DLTADecode.cpp
LIBANCIENT_FILES_SRC += src/DLTADecode.hpp
LIBANCIENT_FILES_SRC += src/DMSDecompressor.cpp
LIBANCIENT_FILES_SRC += src/DMSDecompressor.hpp
LIBANCIENT_FILES_SRC += src/Decompressor.cpp
LIBANCIENT_FILES_SRC += src/Decompressor.hpp
LIBANCIENT_FILES_SRC += src/DynamicHuffmanDecoder.hpp
LIBANCIENT_FILES_SRC += src/FASTDecompressor.cpp
LIBANCIENT_FILES_SRC += src/FASTDecompressor.hpp
LIBANCIENT_FILES_SRC += src/FBR2Decompressor.cpp
LIBANCIENT_FILES_SRC += src/FBR2Decompressor.hpp
LIBANCIENT_FILES_SRC += src/FreezeDecompressor.cpp
LIBANCIENT_FILES_SRC += src/FreezeDecompressor.hpp
LIBANCIENT_FILES_SRC += src/FRLEDecompressor.cpp
LIBANCIENT_FILES_SRC += src/FRLEDecompressor.hpp
LIBANCIENT_FILES_SRC += src/FrequencyTree.hpp
LIBANCIENT_FILES_SRC += src/HFMNDecompressor.cpp
LIBANCIENT_FILES_SRC += src/HFMNDecompressor.hpp
LIBANCIENT_FILES_SRC += src/HUFFDecompressor.cpp
LIBANCIENT_FILES_SRC += src/HUFFDecompressor.hpp
LIBANCIENT_FILES_SRC += src/HuffmanDecoder.hpp
LIBANCIENT_FILES_SRC += src/ILZRDecompressor.cpp
LIBANCIENT_FILES_SRC += src/ILZRDecompressor.hpp
LIBANCIENT_FILES_SRC += src/IMPDecompressor.cpp
LIBANCIENT_FILES_SRC += src/IMPDecompressor.hpp
LIBANCIENT_FILES_SRC += src/InputStream.cpp
LIBANCIENT_FILES_SRC += src/InputStream.hpp
LIBANCIENT_FILES_SRC += src/LHLBDecompressor.cpp
LIBANCIENT_FILES_SRC += src/LHLBDecompressor.hpp
LIBANCIENT_FILES_SRC += src/LIN1Decompressor.cpp
LIBANCIENT_FILES_SRC += src/LIN1Decompressor.hpp
LIBANCIENT_FILES_SRC += src/LIN2Decompressor.cpp
LIBANCIENT_FILES_SRC += src/LIN2Decompressor.hpp
LIBANCIENT_FILES_SRC += src/LOBDecompressor.cpp
LIBANCIENT_FILES_SRC += src/LOBDecompressor.hpp
LIBANCIENT_FILES_SRC += src/LZBSDecompressor.cpp
LIBANCIENT_FILES_SRC += src/LZBSDecompressor.hpp
LIBANCIENT_FILES_SRC += src/LZCBDecompressor.cpp
LIBANCIENT_FILES_SRC += src/LZCBDecompressor.hpp
LIBANCIENT_FILES_SRC += src/LZWDecoder.cpp
LIBANCIENT_FILES_SRC += src/LZWDecoder.hpp
LIBANCIENT_FILES_SRC += src/LZW2Decompressor.cpp
LIBANCIENT_FILES_SRC += src/LZW2Decompressor.hpp
LIBANCIENT_FILES_SRC += src/LZW4Decompressor.cpp
LIBANCIENT_FILES_SRC += src/LZW4Decompressor.hpp
LIBANCIENT_FILES_SRC += src/LZW5Decompressor.cpp
LIBANCIENT_FILES_SRC += src/LZW5Decompressor.hpp
LIBANCIENT_FILES_SRC += src/LZXDecompressor.cpp
LIBANCIENT_FILES_SRC += src/LZXDecompressor.hpp
LIBANCIENT_FILES_SRC += src/MASHDecompressor.cpp
LIBANCIENT_FILES_SRC += src/MASHDecompressor.hpp
LIBANCIENT_FILES_SRC += src/MMCMPDecompressor.cpp
LIBANCIENT_FILES_SRC += src/MMCMPDecompressor.hpp
LIBANCIENT_FILES_SRC += src/NONEDecompressor.cpp
LIBANCIENT_FILES_SRC += src/NONEDecompressor.hpp
LIBANCIENT_FILES_SRC += src/NUKEDecompressor.cpp
LIBANCIENT_FILES_SRC += src/NUKEDecompressor.hpp
LIBANCIENT_FILES_SRC += src/OutputStream.cpp
LIBANCIENT_FILES_SRC += src/OutputStream.hpp
LIBANCIENT_FILES_SRC += src/PackDecompressor.cpp
LIBANCIENT_FILES_SRC += src/PackDecompressor.hpp
LIBANCIENT_FILES_SRC += src/PPDecompressor.cpp
LIBANCIENT_FILES_SRC += src/PPDecompressor.hpp
LIBANCIENT_FILES_SRC += src/PPMQDecompressor.cpp
LIBANCIENT_FILES_SRC += src/PPMQDecompressor.hpp
LIBANCIENT_FILES_SRC += src/RAKEDecompressor.cpp
LIBANCIENT_FILES_SRC += src/RAKEDecompressor.hpp
LIBANCIENT_FILES_SRC += src/RDCNDecompressor.cpp
LIBANCIENT_FILES_SRC += src/RDCNDecompressor.hpp
LIBANCIENT_FILES_SRC += src/RLENDecompressor.cpp
LIBANCIENT_FILES_SRC += src/RLENDecompressor.hpp
LIBANCIENT_FILES_SRC += src/RNCDecompressor.cpp
LIBANCIENT_FILES_SRC += src/RNCDecompressor.hpp
LIBANCIENT_FILES_SRC += src/RangeDecoder.cpp
LIBANCIENT_FILES_SRC += src/RangeDecoder.hpp
LIBANCIENT_FILES_SRC += src/SDHCDecompressor.cpp
LIBANCIENT_FILES_SRC += src/SDHCDecompressor.hpp
LIBANCIENT_FILES_SRC += src/SHR3Decompressor.cpp
LIBANCIENT_FILES_SRC += src/SHR3Decompressor.hpp
LIBANCIENT_FILES_SRC += src/SHRIDecompressor.cpp
LIBANCIENT_FILES_SRC += src/SHRIDecompressor.hpp
LIBANCIENT_FILES_SRC += src/SLZ3Decompressor.cpp
LIBANCIENT_FILES_SRC += src/SLZ3Decompressor.hpp
LIBANCIENT_FILES_SRC += src/SMPLDecompressor.cpp
LIBANCIENT_FILES_SRC += src/SMPLDecompressor.hpp
LIBANCIENT_FILES_SRC += src/SQSHDecompressor.cpp
LIBANCIENT_FILES_SRC += src/SQSHDecompressor.hpp
LIBANCIENT_FILES_SRC += src/SXSCDecompressor.cpp
LIBANCIENT_FILES_SRC += src/SXSCDecompressor.hpp
LIBANCIENT_FILES_SRC += src/StoneCrackerDecompressor.cpp
LIBANCIENT_FILES_SRC += src/StoneCrackerDecompressor.hpp
LIBANCIENT_FILES_SRC += src/TDCSDecompressor.cpp
LIBANCIENT_FILES_SRC += src/TDCSDecompressor.hpp
LIBANCIENT_FILES_SRC += src/TPWMDecompressor.cpp
LIBANCIENT_FILES_SRC += src/TPWMDecompressor.hpp
LIBANCIENT_FILES_SRC += src/XPKDecompressor.cpp
LIBANCIENT_FILES_SRC += src/XPKDecompressor.hpp
LIBANCIENT_FILES_SRC += src/XPKMain.cpp
LIBANCIENT_FILES_SRC += src/XPKMain.hpp
LIBANCIENT_FILES_SRC += src/ZENODecompressor.cpp
LIBANCIENT_FILES_SRC += src/ZENODecompressor.hpp
LIBANCIENT_FILES_SRC += src/common/Buffer.cpp
LIBANCIENT_FILES_SRC += src/common/Buffer.hpp
LIBANCIENT_FILES_SRC += src/common/CRC16.cpp
LIBANCIENT_FILES_SRC += src/common/CRC16.hpp
LIBANCIENT_FILES_SRC += src/common/CRC32.cpp
LIBANCIENT_FILES_SRC += src/common/CRC32.hpp
LIBANCIENT_FILES_SRC += src/common/Common.cpp
LIBANCIENT_FILES_SRC += src/common/Common.hpp
LIBANCIENT_FILES_SRC += src/common/MemoryBuffer.cpp
LIBANCIENT_FILES_SRC += src/common/MemoryBuffer.hpp
LIBANCIENT_FILES_SRC += src/common/OverflowCheck.hpp
LIBANCIENT_FILES_SRC += src/common/StaticBuffer.cpp
LIBANCIENT_FILES_SRC += src/common/StaticBuffer.hpp
LIBANCIENT_FILES_SRC += src/common/SubBuffer.cpp
LIBANCIENT_FILES_SRC += src/common/SubBuffer.hpp
LIBANCIENT_FILES_SRC += src/common/WrappedVectorBuffer.cpp
LIBANCIENT_FILES_SRC += src/common/WrappedVectorBuffer.hpp

pkgconfig_DATA += libancient.pc
lib_LTLIBRARIES += libancient.la
libancient_la_LDFLAGS = -version-info $(LIBANCIENT_LTVER_CURRENT):$(LIBANCIENT_LTVER_REVISION):$(LIBANCIENT_LTVER_AGE) -no-undefined
includeancientdir = $(includedir)/ancient
includeancient_HEADERS = 
includeancient_HEADERS += api/ancient/ancient.hpp
#nobase_include_HEADERS += api/ancient/ancient.hpp
libancient_la_CPPFLAGS = -I$(srcdir)/src -I$(srcdir)/api -I$(srcdir)/api/ancient
libancient_la_CXXFLAGS = 
libancient_la_CFLAGS = 
libancient_la_LIBADD = 
libancient_la_SOURCES = 
libancient_la_SOURCES += $(LIBANCIENT_FILES_SRC)

bin_PROGRAMS += ancient
ancient_CPPFLAGS = -I$(srcdir)/api
ancient_CXXFLAGS = 
ancient_LDADD = libancient.la
ancient_SOURCES = 
ancient_SOURCES += main.cpp

